# cpp_sugar

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yaml
include/sugar/: brain_fuck.hh  factory.hh  fnv1a.hh  pipe.hh  scope_guard.hh  string_pool.hh
include/sugar/inc/: string_pool.hh
include/suger/: brain_fuck.hh  fnv1a.hh  pipe.hh
test/: CMakeLists.txt  brain_fuck_test.cc  factory_test.cc  fnv1a_test.cc  pipe_test.cc  scope_guard_test.cc  string_pool_test.cc
